# 09-ffi

./: Cargo.toml  deny.toml
.cargo/: config.toml
algo/: Cargo.toml
algo/src/: algo.rs  lib.rs
node-binding/: Cargo.toml  README.md
node-binding/__test__/: index.spec.ts
node-binding/src/: algo.rs  lib.rs  matrix.rs
python-binding/: Cargo.toml  Homework_document.md  README.md  pyproject.toml
python-binding/python/algo/: __init__.py  _lowlevel.cp312-win_amd64.pyd
python-binding/src/: hasher.rs  lib.rs  matrix.rs  roaring.rs
