[package]
name = "algo"
version = "0.1.0"
authors = ["kailan yue <yuekailan@gmail.com>"]
edition = "2021"
description = ""
documentation = ""
keywords = ["", ""]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kailanyue/09-ffi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.1"
