[package]
name = "python-binding"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_binding"
crate-type = ["cdylib"]

[dependencies]
algo = { workspace = true }
paste = "1.0"
pyo3 = "0.22"
roaring = { version = "0.10", features = ["serde"] }
